add blocks for single service

--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -28,7 +28,9 @@
 @import 'scss/blocks/block-carousel';
 @import 'scss/blocks/block-banner-testo';
 @import 'scss/blocks/block-boxes-cat-services';
+@import 'scss/blocks/block-boxes-services-related';
 @import 'scss/blocks/block-google-maps';
+@import 'scss/blocks/block-text-with-boxes';
 
 // Pages
 //@import './scss/pages/home';
