--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-boxes-cat-services.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-boxes-cat-services.scss
@@ -3,7 +3,9 @@
  ******************************************************/
 
 .block-boxes-cat-services {
-    padding: 7rem 0 5rem;
+    .boxes-cat-servives {
+        padding: 7rem 0 5rem;
+    }
 
     .wrap-boxes {
         padding-top: 4rem;
