--- a/wp-content/themes/publiframework/assets/src/scss/components/_buttons.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_buttons.scss
@@ -98,11 +98,13 @@
     }
 }
 
-.cta {
+.cta,
+.cta .wp-element-button {
     display: inline-flex;
     justify-content: center;
     align-items: center;
     gap: 1.5rem;
+    padding: 0;
     font-family: $main-font;
     text-align: center;
     text-decoration: none;
@@ -111,6 +113,7 @@
     color: $font-col;
     background: transparent;
     border-radius: 0;
+    border: none;
     transition: color 0.3s;
     outline: none;
 
@@ -134,6 +137,7 @@
     &:hover,
     &:focus {
         color: $primary;
+        transform: none;
 
         &::before {
             translate: 0.7rem;
@@ -145,5 +149,9 @@
         cursor: not-allowed;
         opacity: 0.5;
         transform: none;
+    }
+
+    &.back .wp-element-button::before {
+        transform: rotate(180deg);
     }
 }
