add news category archive

--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -35,6 +35,7 @@
 // Pages
 //@import './scss/pages/home';
 @import './scss/pages/archive-services';
+@import './scss/pages/archive-news';
 @import 'scss/pages/internals';
 
 // Layout
