--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
@@ -16,42 +16,6 @@
             margin-top: 5rem;
         }
     }
-}
 
-// Boxes news
-.boxes-news {
-    .box {
-        display: grid;
-        grid-template-rows: 1fr auto;
-        height: 100%;
-        padding: 3rem;
-        color: inherit;
-        box-shadow: 0 0 1.5rem rgba($black, 0.1);
-
-        .category {
-            display: inline-block;
-            min-width: 16.6rem;
-            margin-bottom: 3rem;
-            padding: 1rem;
-            text-align: center;
-            font-size: 1.4rem;
-            color: $white;
-            background: $primary;
-            border-radius: 0.4rem;
-        }
-        .title {
-            font-size: 2.4rem;
-            margin-bottom: 2rem;
-        }
-
-        .date {
-            margin-bottom: 3rem;
-            font-size: 1.4rem;
-            color: $primary;
-        }
-
-        .button {
-            margin-top: 1.5rem;
-        }
-    }
+    // boxes styles in pages/archive-news.scss
 }
