--- a/wp-content/themes/publiframework/assets/src/scss/global/_base.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/global/_base.scss
@@ -4,6 +4,8 @@
 
 html {
     font-size: $base-font;
+    // TODO: disable header scrolled transition if there is a #top-archive anchor in the url
+    scroll-behavior: auto !important;
 }
 
 body {
