add styles internals

--- a/wp-content/themes/publiframework/assets/src/scss/pages/archive-news.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/pages/archive-news.scss
@@ -29,7 +29,7 @@
     }
 }
 
-// Boxes news
+// Boxes news for archive pages and block news section
 .boxes-news {
     .box {
         display: grid;
