--- a/wp-content/themes/publiframework/assets/src/scss/pages/internals.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/pages/internals.scss
@@ -2,7 +2,7 @@
     INTERNAL PAGES and 404
  ******************************************************/
 
-.wrap-internals {
+.block-internal-page {
     padding-top: 8rem;
     padding-bottom: 8rem;
 
