add news single.php

--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-hero.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-hero.scss
@@ -10,5 +10,9 @@
     .titolo_pb {
         margin-top: 3rem;
         @include section-title('large');
+
+        &.h2 {
+            @include section-title('medium');
+        }
     }
 }
