--- a/wp-content/themes/publiframework/assets/src/scss/pages/news.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/pages/news.scss
@@ -1,7 +1,8 @@
 /******************************************************
-    ARCHIVE news
+    News Pages
  ******************************************************/
 
+// Archive
 .news-archive {
     padding-bottom: 8rem;
 
@@ -72,5 +73,18 @@
         .button {
             margin-top: 1.5rem;
         }
+    }
+}
+
+// Single
+.single-news-content {
+    padding-top: 8rem;
+
+    .titolo_pb {
+        padding-bottom: 1rem;
+    }
+
+    p + .titolo_pb {
+        padding-top: 2rem;
     }
 }
