--- a/wp-content/themes/publiframework/templates/single.twig
+++ b/wp-content/themes/publiframework/templates/single.twig
@@ -1,29 +1,11 @@
 {% extends "layout/base.twig" %}
 
 {% block content %}
-
-	<section id="article_content">
-		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-			<div class="article-body">
-				{{post.content}}
-			</div>				
-		</article>
-	</section>
-
-	{% if latest_posts %}
-		<section id="latest_posts" class="py-2 py-lg-4">
-			<div class="container">
-				<div class="row">
-					<span class="h3 mb-3 blu d-block">{{__('They might interest you', theme_slug)}}</span>
-				</div>
-				<div class="row blocco_elenco_pagine justify-content-center">
-					{% for post in latest_posts %}
-						{% set fields = {'cpt': 'post'} %}
-						{% include 'blocks/blocks/partials/tease-post.twig' with {'fields': fields, 'elemento' : post} %}
-					{% endfor %}  
-				</div>
-			</div>
-		</section>
-	{% endif %}
-
+    <section class="single-news">
+        <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+            <div class="article-body">
+                {{ post.content }}
+            </div>
+        </article>
+    </section>
 {% endblock %}
