--- a/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
@@ -170,6 +170,18 @@
             margin: 0;
             background: #4e545a;
         }
+
+        .wp-element-button {
+            input {
+                all: unset;
+            }
+
+            &:has(input:disabled) {
+                cursor: not-allowed;
+                opacity: 0.5;
+                transform: none;
+            }
+        }
     }
 }
 
