add pre-filter when going to services archive from external page link

--- a/wp-content/themes/publiframework/assets/src/scss/pages/archive-services.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/pages/archive-services.scss
@@ -88,6 +88,14 @@
             }
         }
     }
+
+    .clear-filters {
+        all: unset;
+        font-size: 1.4rem;
+        font-weight: $font-bold;
+        text-decoration: underline;
+        cursor: pointer;
+    }
 }
 
 .box-services {
