add overlay to block slider with video

--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-video.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-video.scss
@@ -14,9 +14,22 @@
         height: 65rem;
 
         .swiper-slide {
+            position: relative;
             display: flex;
             align-items: center;
             padding: 4rem 0;
+
+            // overlay
+            &::before {
+                content: '';
+                position: absolute;
+                inset: 0;
+                background: rgba($black, 0.1);
+            }
+
+            .container {
+                position: relative;
+            }
 
             .image {
                 width: 100%;
