disable parent page links on breadcrumb when used only for organization purpose

--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-breadcrumbs.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-breadcrumbs.scss
@@ -21,3 +21,15 @@
         color: $font-col;
     }
 }
+
+// Disable unused parent pages links
+.parent-pageid-249,
+.parent-pageid-254 {
+    .block-breadcrumbs {
+        span:nth-child(2) {
+            a {
+                pointer-events: none;
+            }
+        }
+    }
+}
