add base work with us applications forms and modals

--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -31,6 +31,7 @@
 @import 'scss/blocks/block-boxes-services-related';
 @import 'scss/blocks/block-google-maps';
 @import 'scss/blocks/block-text-with-boxes';
+@import 'scss/blocks/block-work-application';
 
 // Pages
 //@import './scss/pages/home';
