--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-side-image.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-text-side-image.scss
@@ -27,6 +27,10 @@
         }
     }
 
+    ul {
+        @include list-custom('black');
+    }
+
     .wp-block-image {
         position: absolute;
         top: 0;
@@ -41,5 +45,16 @@
 
     .wp-element-button {
         margin-top: 3rem;
+    }
+
+    // Text large version
+    &.text-large {
+        .wp-block-evidenzio-column {
+            &:first-child {
+                & > * {
+                    max-width: 100%;
+                }
+            }
+        }
     }
 }
