--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-hero.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-hero.scss
@@ -3,9 +3,19 @@
  ******************************************************/
 
 .block-hero {
+    position: relative;
     display: flex;
     align-items: center;
     min-height: 35rem;
+
+    // overlay
+    &::before {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        inset: 0;
+        background: rgba($black, 0.3);
+    }
 
     .titolo_pb {
         margin-top: 3rem;
