--- a/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
@@ -159,6 +159,7 @@
             }
         }
     }
+
     .wrap-submit {
         position: relative;
         text-align: right;
@@ -181,6 +182,102 @@
                 opacity: 0.5;
                 transform: none;
             }
+        }
+    }
+}
+
+// Forms Application variation
+.wrap-form.form-application {
+    .wpcf7-form {
+        input[type='text'],
+        input[type='email'],
+        input[type='number'],
+        input[type='tel'],
+        select,
+        textarea {
+            background: $light-gray;
+        }
+    }
+
+    // custom select
+    .wrap-select {
+        background: $light-gray;
+
+        select {
+            background: transparent;
+        }
+    }
+
+    .cv-label {
+        .wpcf7-form-control-wrap {
+            margin-top: 1.5rem;
+        }
+    }
+
+    .wrap-acceptance:not(:last-child) {
+        .wpcf7-form-control-wrap {
+            margin-bottom: 1rem;
+        }
+    }
+
+    .wrap-submit {
+        position: relative;
+        text-align: right;
+
+        .wpcf7-spinner {
+            position: absolute;
+            top: 1.2rem;
+            right: 50%;
+            transform: translateX(50%);
+            margin: 0;
+            background: #4e545a;
+        }
+
+        .wp-element-button {
+            input {
+                all: unset;
+            }
+
+            &:has(input:disabled) {
+                cursor: not-allowed;
+                opacity: 0.5;
+                transform: none;
+            }
+        }
+    }
+}
+
+.wrap-form.form-modal {
+    .label-checkbox {
+        .wrap-acceptance {
+            margin-top: 1rem;
+            color: $font-col;
+            font-size: 1.8rem;
+
+            .wpcf7-form-control-wrap {
+                margin-bottom: 0;
+            }
+
+            label {
+                input + span {
+                    padding-left: 3rem;
+
+                    &::before {
+                        top: 0.5rem;
+                        width: 1.6rem;
+                        height: 1.6rem;
+                    }
+
+                    &::after {
+                        top: 0.8rem;
+                        width: 1rem;
+                        height: 1rem;
+                    }
+                }
+            }
+        }
+        small {
+            font-size: 1.2rem;
         }
     }
 }
