--- a/wp-content/themes/publiframework/assets/src/scss/pages/news.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/pages/news.scss
@@ -38,6 +38,7 @@
         height: 100%;
         padding: 3rem;
         color: inherit;
+        background: $white;
         box-shadow: 0 0 1.5rem rgba($black, 0.1);
 
         &.in-archive {
