add build script for js

--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-news-section.scss
@@ -6,7 +6,7 @@
     position: relative;
     padding-top: 8rem;
     padding-bottom: 8rem;
-    background: #fff; /* TODO: change with particles */
+    background: #fff;
 
     & > div {
         position: static;
