fix form submit spinner translationX

--- a/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_form.scss
@@ -229,10 +229,12 @@
         .wpcf7-spinner {
             top: 1.2rem;
             right: 50%;
+            transform: translateX(50%);
         }
     }
 }
 
+// Form Modal
 .wrap-form.form-modal {
     .label-checkbox {
         margin-bottom: 2.3rem;
